@@ -273,6 +273,7 @@ PalmFan			palmfan.news palmfan.palmwarefan
 pilot-link              pilot-link.announce pilot-link.devel pilot-link.general
 			pilot-link.unix-ng
 Coldsync		coldsync.main
+J-Pilot			jpilot.main
 PCWEB COLUMN Square	pcweb-column.gyokai pcweb-column.benri
 			pcweb-column.hitech pcweb-column.business
 			pcweb-column.winxp pcweb-column.bytes
